--- a/backend/ventas/src/main/resources/application.properties
+++ b/backend/ventas/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/api_ventas?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
 spring.datasource.username=root
 spring.datasource.password=bic123bic321
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platfform=org.hibernate.dialect.MySQL8Dialect
